--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,15 +4,15 @@
   },
   "extends": [
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
     "airbnb",
+    "plugin:@typescript-eslint/recommended",
     "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
   "globals": {
     "Atomics": "readonly",
-    "__DEV__": "readonly",
-    "SharedArrayBuffer": "readonly"
+    "SharedArrayBuffer": "readonly",
+    "__DEV__": "readonly"
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -40,7 +40,6 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "no-use-before-define": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
