--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,7 +49,8 @@
         "tsx": "never"
       }
     ],
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "no-unused-expressions": "off"
   },
   "settings": {
     "import/resolver": {
