--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,9 @@
         ]
       }
     ],
+    "camelcase": "off",
     "import/prefer-default-export": "off",
+    "@typescript-eslint/camelcase": "off",
     "import/extensions": [
       "error",
       "ignorePackages",
