--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react-hooks/rules-of-hooks": "error",
     "no-use-before-define": "off",
     "react-hooks/exhaustive-deps": "warn",
+    "import/no-duplicates": "off",
     "react/jsx-props-no-spreading": "off",
     "react/jsx-filename-extension": [
       1,
